Fixes the product card size and alignment so they all look even and also product image height has been changed

--- a/src/components/ProductCard.css
+++ b/src/components/ProductCard.css
@@ -4,6 +4,7 @@
   background-color: var(--bg-card);
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   border-radius: 18px;
   overflow: hidden;
   padding: 15px;
@@ -20,7 +21,7 @@
   /* border: 1px solid; */
   position: absolute;
   top: 0px;
-  right: 30px;
+  right: 0px;
   padding: 10px 20px;
   background: #22c55e; /* green */
   color: white;
@@ -30,9 +31,21 @@
   font-size: 16px;
   font-weight: 700;
 }
+.imgCard{
+  width: 100%;
+  height: 250px;   /* FIXED HEIGHT */
+  
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  overflow: hidden;
+}
 .imgCard img {
   width: 100%;
+  height: 100%;
   margin-bottom: 12px;
+  object-fit: contain;
 }
 .productInfo {
   /* border: 1px solid; */
